clock and jsscript

--- a/Projekt1/index.html
+++ b/Projekt1/index.html
@@ -27,7 +27,25 @@
 					<h1>Wędkarstwo</h1>
 					<p>czyli to co kocham!</p>
 				</div>
-				<div class="header-bg"></div>
+				<div class="header-bg">
+					<div class="clock">
+						<div class="hand hour" data-hour-hand></div>
+						<div class="hand minute" data-minute-hand></div>
+						<div class="hand second" data-second-hand></div>
+						<div class="number number1">1</div>
+						<div class="number number2">2</div>
+						<div class="number number3">3</div>
+						<div class="number number4">4</div>
+						<div class="number number5">5</div>
+						<div class="number number6">6</div>
+						<div class="number number7">7</div>
+						<div class="number number8">8</div>
+						<div class="number number9">9</div>
+						<div class="number number10">10</div>
+						<div class="number number11">11</div>
+						<div class="number number12">12</div>
+					</div>
+				</div>
 			</div>
 		</header>
 
@@ -46,10 +64,19 @@
 
 		<div class="aboutme">
 			<h1>tu powstanie strona startowa</h1>
+
+			<form method="POST" name="background">
+				<input
+					type="button"
+					value="zółty"
+					ONCLICK="changeBackground('#FFF000')"
+				/>
+			</form>
 		</div>
 
 		<footer>
 			<p>&copy;2022 Krystian Kierklo</p>
 		</footer>
+		<script src="./js/skrypty.js"></script>
 	</body>
 </html>
