--- a/Projekt1/html/ryby.html
+++ b/Projekt1/html/ryby.html
@@ -18,7 +18,7 @@
 			crossorigin="anonymous"
 		></script>
 
-		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="../css/style.css" />
 	</head>
 	<body>
 		<header>
@@ -27,7 +27,25 @@
 					<h1>Wędkarstwo</h1>
 					<p>czyli to co kocham!</p>
 				</div>
-				<div class="header-bg"></div>
+				<div class="header-bg">
+					<div class="clock">
+						<div class="hand hour" data-hour-hand></div>
+						<div class="hand minute" data-minute-hand></div>
+						<div class="hand second" data-second-hand></div>
+						<div class="number number1">1</div>
+						<div class="number number2">2</div>
+						<div class="number number3">3</div>
+						<div class="number number4">4</div>
+						<div class="number number5">5</div>
+						<div class="number number6">6</div>
+						<div class="number number7">7</div>
+						<div class="number number8">8</div>
+						<div class="number number9">9</div>
+						<div class="number number10">10</div>
+						<div class="number number11">11</div>
+						<div class="number number12">12</div>
+					</div>
+				</div>
 			</div>
 		</header>
 
@@ -35,11 +53,11 @@
 			<div class="wrapper">
 				<button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
 				<div class="nav-items">
-					<a href="./index.html">o mnie</a>
-					<a href="./sprzet.html">Akcesoria</a>
-					<a href="./ryby.html">ryby</a>
-					<a href="./galeria.html">galeria</a>
-					<a href="./kontakt.html">kontakt</a>
+					<a href="../index.html">o mnie</a>
+					<a href="../html/sprzet.html">Akcesoria</a>
+					<a href="../html/ryby.html">ryby</a>
+					<a href="../html/galeria.html">galeria</a>
+					<a href="../html/kontakt.html">kontakt</a>
 				</div>
 			</div>
 		</nav>
@@ -62,7 +80,7 @@
 					ucieczkę. Głównym źródłem pożywienia są dla niego małe zwierzęta
 					lądowe, ptaki oraz ryby, w tym także przedstawiciele własnego gatunku,
 					na które poluje, czyhając w ukryciu między roślinami wodnymi.
-					<img src="./img/szczupak.jpg" alt="ryba szczupak" />
+					<img src="../img/szczupak.jpg" alt="ryba szczupak" />
 				</div>
 			</div>
 
@@ -77,7 +95,7 @@
 					twardym dnie; w jeziorach żeruje na głębokości od 2 do 5 metrów.
 					Charakteryzuje się stosunkowo małą głową i wydłużonym, lekko
 					spłaszczonym ciałem. Dorasta nawet do 130 centymetrów.
-					<img src="./img/sandacz.jpg" alt="ryba sandacz" />
+					<img src="../img/sandacz.jpg" alt="ryba sandacz" />
 				</div>
 			</div>
 
@@ -93,7 +111,7 @@
 					do czerwca na płyciznach. Samica składa od 12 000 do 300 000 ziaren
 					ikry, które składane są na kamieniach, roślinach wodnych. Wylęg
 					następuje po około 2-3 tygodniach.
-					<img src="./img/okon.jpg" alt="ryba okoń" />
+					<img src="../img/okon.jpg" alt="ryba okoń" />
 				</div>
 			</div>
 
@@ -107,7 +125,7 @@
 					skorupiakami. Większe okazy zjadają mniejsze ryby, żaby, a nawet małe
 					ssaki. Tarło sumów przypada na okres od maja to lipca i zawsze ma
 					miejsce w wodach o temperaturze ponad 20 stopni Celsjusza.
-					<img src="./img/sum.jpg" alt="ryba sum" />
+					<img src="../img/sum.jpg" alt="ryba sum" />
 				</div>
 			</div>
 
@@ -126,7 +144,7 @@
 					królewskiego, pełnołuskiego, bezłuskiego czyli golca, koi oraz
 					zatorskiego. Najczęstszym źródłem pożywienia są liczne larwy owadów,
 					mięczaki, skorupiaki, glony inne, mniejsze organizmy.
-					<img src="./img/karp.jpg" alt="ryba karp" />
+					<img src="../img/karp.jpg" alt="ryba karp" />
 				</div>
 			</div>
 
@@ -145,7 +163,7 @@
 					zaś czasami za pokarm wybierają sobie owady osiadające na tafli wody.
 					Do chwytania pożywienia używają specyficznego pyszczka, który jest
 					wysuwany w celu złapania ofiary.
-					<img src="./img/leszcz.jpg" alt="ryba leszcz" />
+					<img src="../img/leszcz.jpg" alt="ryba leszcz" />
 				</div>
 			</div>
 
@@ -173,7 +191,7 @@
 					połów karasi. Liczebność populacji karasi zależy od warunków
 					środowiska – w monokulturze może być wielka. Natomiast w środowisku
 					naturalnym liczebność ta spada ze względu na obecność drapieżników.
-					<img src="./img/karas.jpg" alt="ryba karaś" />
+					<img src="../img/karas.jpg" alt="ryba karaś" />
 				</div>
 			</div>
 
@@ -193,7 +211,7 @@
 					Optymalną temperaturą wody to około 12 stopni Celsjusza. Warto zwrócić
 					uwagę na to, że ryby te mają podobne wymagania siedliskowe jak karpie.
 					Dlatego też bardzo często można znaleźć oba te gatunki razem.
-					<img src="./img/amur.jpg" alt="ryba amur" />
+					<img src="../img/amur.jpg" alt="ryba amur" />
 				</div>
 			</div>
 
@@ -213,7 +231,7 @@
 					na podwodnych roślinach lub kamieniach. Okres połowu. Płocie można
 					łowić cały rok. Mówi się, że te ryby otwierają i zamykają okres
 					połowu. Łowione są z pod lodu oraz zaraz po jego zejściu.
-					<img src="./img/ploc.jpg" alt="ryba płoć" />
+					<img src="../img/ploc.jpg" alt="ryba płoć" />
 				</div>
 			</div>
 
@@ -240,7 +258,7 @@
 					i 4,50 kilograma. Jeśli chcesz spróbować swoich sił w złowieniu tej
 					ryby to nic nie stoi na przeszkodzie – do dzieła, z pewnością będziesz
 					bardzo zadowolony z złowionego okazu.
-					<img src="./img/lin.jpg" alt="ryba lin" />
+					<img src="../img/lin.jpg" alt="ryba lin" />
 				</div>
 			</div>
 
@@ -258,7 +276,7 @@
 					odżywiać się rybami. Tarło odbywa się od marca do maja w rzekach o
 					szybkim nurcie oraz kamienistym dnie. Samce mają wysypkę tarłową
 					umiejscowioną na płetwach piersiowych i wieczkach skrzelowych.
-					<img src="./img/bolen.jpg" alt="ryba bolen" />
+					<img src="../img/bolen.jpg" alt="ryba bolen" />
 				</div>
 			</div>
 
@@ -273,7 +291,7 @@
 					przystosowana do życia przydennego. Naturalnym środowiskiem są rzeki –
 					młodsze osobniki przebywają zazwyczaj bliżej brzegu, a starsze
 					osobniki preferują głębszą wodę.
-					<img src="./img/brzana.jpg" alt="ryba brzana" />
+					<img src="../img/brzana.jpg" alt="ryba brzana" />
 				</div>
 			</div>
 
@@ -291,7 +309,7 @@
 					między innymi groch, pinki, żywe owady. Natomiast najlepszymi zanętami
 					są zdecydowanie mieszanki na ryby karpiowate oraz sypkie mieszanki
 					jaziowo – kleniowe.
-					<img src="./img/jaz.jpg" alt="ryba jaź" />
+					<img src="../img/jaz.jpg" alt="ryba jaź" />
 				</div>
 			</div>
 
@@ -310,7 +328,7 @@
 					lipcu i sierpniu żywią się małymi rybami. Tarło rozpoczyna się wraz z
 					nadejściem jesieni, kiedy to wykonuje wędrówki tarłowe do niewielkich
 					dopływów ze żwirowym dnem.
-					<img src="./img/pstrag.jpg" alt="ryba pstrąg" />
+					<img src="../img/pstrag.jpg" alt="ryba pstrąg" />
 				</div>
 			</div>
 
@@ -329,7 +347,7 @@
 					długości ciała ma też liczne plamki. Jako że dorsz to ryba drapieżna,
 					odżywia się on głównie mniejszymi od siebie rybami, takimi jak śledzie
 					czy makrele, ale też małymi skorupiakami.
-					<img src="./img/dorsz.jpg" alt="ryba dorsz" />
+					<img src="../img/dorsz.jpg" alt="ryba dorsz" />
 				</div>
 			</div>
 		</main>
@@ -337,5 +355,6 @@
 		<footer>
 			<p>&copy;2022 Krystian Kierklo</p>
 		</footer>
+		<script src="../js/skrypty.js"></script>
 	</body>
 </html>
