--- a/Projekt1/html/sprzet.html
+++ b/Projekt1/html/sprzet.html
@@ -18,8 +18,7 @@
 			crossorigin="anonymous"
 		></script>
 
-		<link rel="stylesheet" href="./css/style.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="../css/style.css" />
 	</head>
 	<body>
 		<header>
@@ -54,32 +53,19 @@
 			<div class="wrapper">
 				<button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
 				<div class="nav-items">
-					<a href="./index.html">o mnie</a>
-					<a href="./html/sprzet.html">Akcesoria</a>
-					<a href="./html/ryby.html">ryby</a>
-					<a href="./html/galeria.html">galeria</a>
-					<a href="./html/kontakt.html">kontakt</a>
+					<a href="../index.html">o mnie</a>
+					<a href="../html/sprzet.html">Akcesoria</a>
+					<a href="../html/ryby.html">ryby</a>
+					<a href="../html/galeria.html">galeria</a>
+					<a href="../html/kontakt.html">kontakt</a>
 				</div>
 			</div>
 		</nav>
 
-		<div class="aboutme">
-			<h1>tu powstanie strona startowa</h1>
-
-			<form method="POST" name="background">
-				<input
-					type="button"
-					value="zółty"
-					ONCLICK="changeBackground('#FFF000')"
-				/>
-			</form>
-
-			<button id="Test1">powiększę się</button>
-		</div>
-
+		<h1>Tutaj powstanie mini sklep internetowy</h1>
 		<footer>
 			<p>&copy;2022 Krystian Kierklo</p>
 		</footer>
-		<script src="./js/skrypty.js"></script>
+		<script src="../js/skrypty.js"></script>
 	</body>
 </html>
