--- a/Projekt1/html/galeria.html
+++ b/Projekt1/html/galeria.html
@@ -17,23 +17,41 @@
 			src="https://kit.fontawesome.com/b5129f6c17.js"
 			crossorigin="anonymous"
 		></script>
+		<link rel="stylesheet" href="../css/style.css" />
 
-		<link rel="stylesheet" href="./css/style.css" />
 		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-			crossorigin="anonymous"
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+		crossorigin="anonymous"
 		/>
 	</head>
 	<body>
 		<header>
 			<div class="header-img">
-				<div class="header-text">
-					<h1>Wędkarstwo</h1>
+			<div class="header-text">
+				<h1>Wędkarstwo</h1>
 					<p>czyli to co kocham!</p>
 				</div>
-				<div class="header-bg"></div>
+				<div class="header-bg">
+					<div class="clock">
+						<div class="hand hour" data-hour-hand></div>
+						<div class="hand minute" data-minute-hand></div>
+						<div class="hand second" data-second-hand></div>
+						<div class="number number1">1</div>
+						<div class="number number2">2</div>
+						<div class="number number3">3</div>
+						<div class="number number4">4</div>
+						<div class="number number5">5</div>
+						<div class="number number6">6</div>
+						<div class="number number7">7</div>
+						<div class="number number8">8</div>
+						<div class="number number9">9</div>
+						<div class="number number10">10</div>
+						<div class="number number11">11</div>
+						<div class="number number12">12</div>
+					</div>
+				</div>
 			</div>
 		</header>
 
@@ -41,11 +59,11 @@
 			<div class="wrapper">
 				<button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
 				<div class="nav-items">
-					<a href="./index.html">o mnie</a>
-					<a href="./sprzet.html">Akcesoria</a>
-					<a href="./ryby.html">ryby</a>
-					<a href="./galeria.html">galeria</a>
-					<a href="./kontakt.html">kontakt</a>
+					<a href="../index.html">o mnie</a>
+					<a href="../html/sprzet.html">Akcesoria</a>
+					<a href="../html/ryby.html">ryby</a>
+					<a href="../html/galeria.html">galeria</a>
+					<a href="../html/kontakt.html">kontakt</a>
 				</div>
 			</div>
 		</nav>
@@ -92,31 +110,51 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./img/galery_carousel/boleń.jpg" class="d-block w-100" alt="boleń" />
+						<img
+							src="../img/galery_carousel/boleń.jpg"
+							class="d-block w-100"
+							alt="boleń"
+						/>
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Jesień z boleniami</h5>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="./img/galery_carousel/szczupak.jpg" class="d-block w-100" alt="szczupak" />
+						<img
+							src="../img/galery_carousel/szczupak.jpg"
+							class="d-block w-100"
+							alt="szczupak"
+						/>
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Szczupak 120+</h5>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="./img/galery_carousel/karpie.jpg" class="d-block w-100" alt="karpie" />
+						<img
+							src="../img/galery_carousel/karpie.jpg"
+							class="d-block w-100"
+							alt="karpie"
+						/>
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Karpie na Gran Canarii</h5>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="./img/galery_carousel/okon.jpg" class="d-block w-100" alt="okoń" />
+						<img
+							src="../img/galery_carousel/okon.jpg"
+							class="d-block w-100"
+							alt="okoń"
+						/>
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Okoń 46 cm</h5>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="./img/galery_carousel/leszcz.jpg" class="d-block w-100" alt="leszcz" />
+						<img
+							src="../img/galery_carousel/leszcz.jpg"
+							class="d-block w-100"
+							alt="leszcz"
+						/>
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Morski leszcz, czyli bałtyckie złoto</h5>
 						</div>
@@ -143,10 +181,10 @@
 			</div>
 		</div>
 
-		
 		<footer>
 			<p>&copy;2022 Krystian Kierklo</p>
 		</footer>
+		<script src="../js/skrypty.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
