--- a/Projekt1/html/kontakt.html
+++ b/Projekt1/html/kontakt.html
@@ -18,7 +18,7 @@
 			crossorigin="anonymous"
 		></script>
 
-		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="../css/style.css" />
 	</head>
 	<body>
 		<header>
@@ -27,7 +27,25 @@
 					<h1>Wędkarstwo</h1>
 					<p>czyli to co kocham!</p>
 				</div>
-				<div class="header-bg"></div>
+				<div class="header-bg">
+					<div class="clock">
+						<div class="hand hour" data-hour-hand></div>
+						<div class="hand minute" data-minute-hand></div>
+						<div class="hand second" data-second-hand></div>
+						<div class="number number1">1</div>
+						<div class="number number2">2</div>
+						<div class="number number3">3</div>
+						<div class="number number4">4</div>
+						<div class="number number5">5</div>
+						<div class="number number6">6</div>
+						<div class="number number7">7</div>
+						<div class="number number8">8</div>
+						<div class="number number9">9</div>
+						<div class="number number10">10</div>
+						<div class="number number11">11</div>
+						<div class="number number12">12</div>
+					</div>
+				</div>
 			</div>
 		</header>
 
@@ -35,11 +53,11 @@
 			<div class="wrapper">
 				<button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
 				<div class="nav-items">
-					<a href="./index.html">o mnie</a>
-					<a href="./sprzet.html">Akcesoria</a>
-					<a href="./ryby.html">ryby</a>
-					<a href="./galeria.html">galeria</a>
-					<a href="./kontakt.html">kontakt</a>
+					<a href="../index.html">o mnie</a>
+					<a href="../html/sprzet.html">Akcesoria</a>
+					<a href="../html/ryby.html">ryby</a>
+					<a href="../html/galeria.html">galeria</a>
+					<a href="../html/kontakt.html">kontakt</a>
 				</div>
 			</div>
 		</nav>
@@ -51,12 +69,16 @@
 
 			<tbody>
 				<tr>
-					<td><i class="fa-solid fa-phone"></i>   telefon </td>
+					<td><i class="fa-solid fa-phone"></i> telefon</td>
 					<td>515 932 404</td>
 				</tr>
 				<tr>
 					<td class="odd"><i class="fa-solid fa-at"></i> e-mail</td>
-					<td class="odd"><a href="mailto: krystian.kierklo3@gmail.com">krystian.kierklo3@gmail.com</a></td>
+					<td class="odd">
+						<a href="mailto: krystian.kierklo3@gmail.com"
+							>krystian.kierklo3@gmail.com</a
+						>
+					</td>
 				</tr>
 				<tr>
 					<td><i class="fa-solid fa-envelope"></i> Adres</td>
@@ -86,5 +108,6 @@
 		<footer>
 			<p>&copy;2022 Krystian Kierklo</p>
 		</footer>
+		<script src="../js/skrypty.js"></script>
 	</body>
 </html>
