--- a/Projekt1/html/kontakt.html
+++ b/Projekt1/html/kontakt.html
@@ -7,19 +7,18 @@
 		<tbody>
 			<tr>
 				<td><i class="fa-solid fa-phone"></i> telefon</td>
-				<td>515 932 404</td>
+				<td></td>
 			</tr>
 			<tr>
 				<td class="odd"><i class="fa-solid fa-at"></i> e-mail</td>
 				<td class="odd">
-					<a href="mailto: krystian.kierklo3@gmail.com"
-						>krystian.kierklo3@gmail.com</a
+					<a href="mailto: </a
 					>
 				</td>
 			</tr>
 			<tr>
 				<td><i class="fa-solid fa-envelope"></i> Adres</td>
-				<td>Gałczyńskiego 5/8 11-041 Olsztyn</td>
+				<td>Gałczyńskiego 8 11-041 Olsztyn</td>
 			</tr>
 			<tr>
 				<td class="odd"><i class="fa-brands fa-github"></i> Github</td>
